--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>클래스어라운드 · 카카오톡 입장자 체크봇 (Sheets API)</title>
+  <!-- Google Identity Services (OAuth) -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <style>
     :root{
@@ -99,6 +100,10 @@
       </div>
 
       <div class="row" style="margin-top:10px">
+        <label class="row" style="gap:6px;align-items:center">
+          <input id="previewOnly" type="checkbox" />
+          <span class="hint">체크만(쓰기 금지)</span>
+        </label>
         <button id="runBtn" class="btn acc" type="button">실행</button>
         <button id="demoBtn" class="btn" type="button">데모</button>
         <span id="pills" class="row"></span>
@@ -226,7 +231,7 @@ async function batchUpdateValues(spreadsheetId, dataRanges){
 }
 
 /* ===== 관리자 저장 ===== */
-const PACKS_KEY='ca_gsapi_sources_v11';
+const PACKS_KEY='ca_gsapi_sources_v12';
 const loadPacks=()=>{ try{return JSON.parse(localStorage.getItem(PACKS_KEY)||'[]');}catch(e){return [];} };
 const savePacks=(ps)=> localStorage.setItem(PACKS_KEY, JSON.stringify(ps));
 const addPack=(p)=>{ const a=loadPacks(); a.push(p); savePacks(a); };
@@ -307,6 +312,7 @@ function onPackChanged(){
 const JOIN_PAT  = /(.*?)님이\s*(입장하셨습니다|들어왔습니다|입장했습니다|들어오셨습니다)[\s\.\!]*$/;
 const LEAVE_PAT = /(.*?)님이\s*(퇴장하셨습니다|나갔습니다|퇴장했습니다|나가셨습니다)[\s\.\!]*$/;
 
+/* 이름 우선 + 특수기호 무시 번호 끝4 */
 function splitNickname(nick){
   const raw = String(nick||'').trim();
   if(!raw) return null;
@@ -336,6 +342,8 @@ async function runMain(){
   try{
     txt('err','');
     const resBox = $$('results'); if(resBox) resBox.innerHTML='';
+    const previewOnly = $$("#previewOnly")?.checked;
+
     const chatFile=$$('chatFile')?.files?.[0]; if(!chatFile) throw new Error('대화 txt 파일을 선택하세요.');
     const packSel=$$('sheetPackSelect'); if(!packSel || !packSel.value) throw new Error('스프레드시트를 선택하세요.');
     const readSheet=val('readSheetSelect'); if(!readSheet) throw new Error('읽기 시트를 선택하세요.');
@@ -405,7 +413,7 @@ async function runMain(){
       }
     });
 
-    // 3) 공유 시트 결제완료만 대상으로 S=입장 기록
+    // 3) 공유 시트 결제완료만 대상으로 S=입장 기록 (체크만 모드면 쓰지 않음)
     const writeRange = `${writeSheet}!D${WRITE_START_ROW}:S`;
     const wdata = await getRange(sheetId, writeRange);
     const rows = wdata.values || [];
@@ -454,7 +462,9 @@ async function runMain(){
       }
     }
 
-    if(updates.length) await batchUpdateValues(sheetId, updates);
+    if(updates.length && !previewOnly){
+      await batchUpdateValues(sheetId, updates);
+    }
 
     // 상단 배지
     const pills=$$('pills'); if(pills){ pills.innerHTML='';
@@ -462,6 +472,7 @@ async function runMain(){
       pills.appendChild(mk(`입장로그 join ${joinedCount}`,'ok'));
       pills.appendChild(mk(`퇴장로그 leave ${leftCount}`,'bad'));
       pills.appendChild(mk(`입장 대상(읽기시트) ${attendingSetN.size}`,'warn'));
+      if(previewOnly) pills.appendChild(mk('체크만','warn'));
     }
 
     // 테이블 렌더
@@ -479,7 +490,8 @@ async function runMain(){
     resTbl('내 명단 기준 상태(읽기 시트)', ['name','status','matched_id','notes'], report);
     resTbl('명단 외 입장자', ['name/last4 or (번호없음)'], extra);
     resTbl('미확인 목록(공유 시트 동명이인/번호 문제)', ['name','reason'], unresolved);
-    resTbl('공유 시트 갱신 결과', ['updated_cells'], updates.map(u=>[u.range+' ← 입장']));
+    resTbl(previewOnly ? '예상 갱신 결과(체크만 모드)' : '공유 시트 갱신 결과',
+           ['updated_cells'], updates.map(u=>[u.range+' ← 입장']));
 
   }catch(e){ txt('err','오류: '+(e?.message||e)); console.error(e); }
 }
